--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>DOM</title>
 </head>
 <body>
+
+    <button class="tıkla" id="tıkla" type="submit">tıkla</button>
     <script src="app.js"></script>
 </body>
 </html>
