--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <button class="tıkla" id="tıkla" type="submit">tıkla</button>
+    <button class="tıkla" id="tıkla" type="mouseup">tıkla</button>
     <script src="app.js"></script>
 </body>
 </html>
