--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 
     <button class="tıkla" id="tıkla" type="mouseup">tıkla</button>
+    <form action="#">
+        <input class="input_1" type="text" placeholder="Bİr şeyler giriniz." style="padding:10px;">
+        <input class="input_submit" type="submit", value="Gönder" style="padding:10px ;">
+    </form>
     <script src="app.js"></script>
 </body>
 </html>
