--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>DOM</title>
 </head>
 <body>
-
+<div class="span">
+    <span class="SpanClass">
+        Merhaba Span Nesnesi
+    </span>
+</div>
     <button class="tıkla" id="tıkla" type="mouseup">tıkla</button>
     <form action="#">
         <input class="input_1" type="text" placeholder="Bİr şeyler giriniz." style="padding:10px;">
